Fixed top right menu spacing so long text isn't cut off or overlapping

--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,10 @@ h1, h2, h3, h4, h5 {
   font-size: 48pt;
 }
 
+.clear {
+    clear: both;
+}
+
 nav {
     width: 100%;
     color: var(--off-white);
@@ -107,7 +111,7 @@ nav {
 nav ul{
   float: right;
   margin: 0;
-  padding: 0;  
+  padding: 0;
 }
 
 nav #PUWP{
@@ -121,7 +125,7 @@ nav #PUWP{
 nav li {
   display: inline-block;
   margin: 0;
-  width: 130px; /* TODO: 175px */
+  /*width: 130px; !* TODO: 175px *!*/
   text-align: center;
   margin: 0;
   padding: 0;
@@ -135,6 +139,8 @@ table{
 nav li a {
   color: var(--off-white);
   text-decoration: none;
+  display: inline-block;
+  padding: 0 0.5em;
 }
 
 nav li:hover {
@@ -195,7 +201,7 @@ header {
     }
     .container h1{
       font-size: 24pt;
-    }    
+    }
     .container {
       padding-left: 15px;
       padding-right: 15px;
@@ -209,8 +215,8 @@ header {
       height: 50px;
       line-height: 50px;
     }
-    nav li {  
-      width: 90px;
+    nav li {
+      /*width: 90px;*/
     }
 }
 
